# DatabaseCloneValidator

./: .gitignore  CMakeLists.txt  LICENSE
src/: Application.h  main.cpp  resources.qrc
